tests/parsing/smtlib/v2.6/errors/031_match_unclosed_2.expected
File "tests/parsing/smtlib/v2.6/errors/031_match_unclosed_2.smt2", line 3, character 44-45:
3 | (define-fun f ((x t)) t (= (match x ((A B)) 5))
                                                ^
Error while parsing a match, read the integer '5',
      but expected a closing parenthesis to close the match.
